# cinemetrics

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  update-data.yml
data/: README.md
docs/: FRONTEND-REDESIGN.md  STORY-IDEAS.md
ingest/: __init__.py  csvio.py  enrich.py  geo.py  http.py  letterboxd.py  omdb.py  parse.py  tmdb.py
recommend/: __init__.py  encode.py  explain.py  model.py  taste.py
scripts/: backfill_tmdb_ids.py  build_map_geo.py  eval_taste.py  export_web.py  fetch_candidates.py  rebuild_enrichment.py  train_embeddings.py  update.py  upload_r2.py
tests/: test_csvio.py  test_encode.py  test_enrich.py  test_explain.py  test_fetch_candidates_cache.py  test_http.py  test_model.py  test_parse.py  test_taste.py  test_update_plan.py
transform/: dbt_project.yml  profiles.yml
transform/macros/: franchise_mapping.sql
transform/models/marts/: _marts.yml  dim_candidate.sql  dim_film.sql  fct_watches.sql
transform/models/staging/: _staging.yml  stg_candidate_enrichment.sql  stg_film_enrichment.sql  stg_film_log.sql
transform/seeds/: candidate_enrichment.csv  film_enrichment.csv  film_log.csv
web/: README.md  package-lock.json  package.json
web/public/data/: cinemetrics.json  countries.geojson
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/: ChartTakeaway.tsx  CopyChartLink.tsx  CountryBars.tsx  ExplorerApp.tsx  FilmCard.tsx  FilterBar.tsx  Footer.tsx  FranchiseRuns.tsx  KeywordBars.tsx  RangeSlider.tsx  RecommendDrawer.tsx  StatBar.tsx  (+13 more)
(+29 files in other folders)
