[project]
name = "cinemetrics"
version = "0.1.0"
description = "An end-to-end analytics pipeline over seven years of personal film-watching data."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.1",
    "pandas>=2.2",
    "requests>=2.32",
    "python-dotenv>=1.0",
    "dbt-duckdb>=1.9",
    "scikit-learn>=1.5",
    "numpy>=1.26",
    "boto3>=1.34",
]

[tool.setuptools.packages.find]
include = ["recommend*", "ingest*", "transform*"]

[tool.pytest.ini_options]
pythonpath = "."

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pytest>=8.0",
    "jupyter>=1.1",
    "matplotlib>=3.9",
    "seaborn>=0.13",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
